# Ai-Agent-Learning

./: Readme.md  main2.py
Augmented LLM  Memory  Processess - Manager/: Augmented_LLM___Memory___Processess_Manager_Agent,_Planner_LLM.ipynb  augmented_llm___memory___processess_manager_agent,_planner_llm.py
Chatbot with Agents SDK, Streaming and Tools/: Chatbot_with_Agents_SDK.ipynb  chatbot_with_agents_sdk.py
Chatbot with Agents SDK, Streaming and Tools/chain_hello/: .env  README.md  hello.py  pyproject.toml
Crew Ai Practise/guide_creator_flow/: pyproject.toml
Crew Ai Practise/guide_creator_flow/src/guide_creator_flow/: main.py
CrewAI Flow/: Docs.txt
CrewAI Flow/crew-flow/: crewai_flow.html  fun_facts.txt  pyproject.toml
CrewAI Flow/crew-flow/src/: router_flow.py
CrewAI Flow/crew-flow/src/crew_flow/: crew_flow.py  main.py  router_flow.py
CrewAI Flow/guide_creator_flow/: pyproject.toml
CrewAI with DeepSeek/knowledge/knowledge/: README.md  pyproject.toml
CrewAI with DeepSeek/knowledge/knowledge/src/knowledge/: main.py  main1.py
CrewAI with DeepSeek/litellm3/: README.md  pyproject.toml
CrewAI with DeepSeek/litellm3/src/litellm3/: main.py  main1.py
CrewAI with DeepSeek/multiple_agents/: README.md  pyproject.toml
CrewAI with DeepSeek/multiple_agents/src/multiple_agents/: main1.py  main2.py
CrewAI with DeepSeek/multiple_agents/src/multiple_agents/crews/dev_crew/: __init__.py  dev_crew.py  dev_crew_wt.py
CrewAI with DeepSeek/multiple_agents/src/multiple_agents/crews/dev_crew/config/: agents.yaml  tasks.yaml
CrewAI with DeepSeek/multiple_modals/: pyproject.toml
CrewAI with DeepSeek/multiple_modals/src/multiple_agents/: main.py
CrewAI with DeepSeek/multiple_modals/src/multiple_agents/crews/dev_crew/: dev_crew.py
CrewAI with DeepSeek/multiple_modals/src/multiple_agents/crews/dev_crew/config/: agents.yaml
CrewAI with DeepSeek/olama_flow/: README.md  poem.txt  pyproject.toml
CrewAI with DeepSeek/olama_flow/src/olama_flow/: main.py
Crewai Deployment/crew_deplyment/: README.md  poem.txt  pyproject.toml
Crewai Deployment/crew_deplyment/src/crew_deplyment/: main.py
Crews, Agents, Task in CrewAI/project4/: .env  pyproject.toml
Crews, Agents, Task in CrewAI/project4/src/project4/: test.py
Crews, Agents, Task in CrewAI/project4/src/project4/crews/teaching_crew/: teaching_crew.py
Crews, Agents, Task in CrewAI/project4/src/project4/crews/teaching_crew/config/: agents.yaml  tasks.yaml
Cursor Ai/app/: page.tsx
Cursor Ai/components/: Calculator.tsx
Fast APi/: fastDocs.txt  index.py
FineTunning/: FineTune.ipynb  FineTune.py
Model Calling/: function_calling.ipynb  index.ipynb
Model Calling/.ipynb_checkpoints/: function_calling-checkpoint.ipynb
OpenAI Agents SDK/Example 1/op_ag/: pyproject.toml
OpenAI Agents SDK/Example 1/op_ag/src/op_ag/: __init__.py
OpenAI Agents SDK/Example 1/pr1/: pyproject.toml
OpenAI Agents SDK/chainlit/example_chainlit/: pyproject.toml
OpenAI Agents SDK/chainlit/example_chainlit/src/example_chainlit/: __init__.py  chatbot.py
Persnol Practise for crew ai/Crew Examples/new_crewaicrews/: pyproject.toml
Persnol Practise for crew ai/Crew Examples/new_crewaicrews/src/new_crewaicrews/: coding_crew.py
Persnol Practise for crew ai/Crew Examples/new_crewaicrews/src/new_crewaicrews/config/: codertask.yaml
Persnol Practise for crew ai/Crew Examples/research_crew/: README.md  pyproject.toml
Persnol Practise for crew ai/Crew Examples/research_crew/src/research_crew/: ai_research_crew.py  crew.py  main.py
Persnol Practise for crew ai/Flow Examples/guide_creator_flow/: README.md  news_article.txt  poem.txt  pyproject.toml
Persnol Practise for crew ai/Flow Examples/guide_creator_flow/src/guide_creator_flow/: ExampleFlow.py  main.py  newsmain.py
Persnol Practise for crew ai/Flow Examples/guide_creator_flow/src/guide_creator_flow/crews/content_crew/: content_crew.py
Persnol Practise for crew ai/Flow Examples/guide_creator_flow/src/guide_creator_flow/crews/news_crew/: news_crew.py
Persnol Practise for crew ai/Flow Examples/guide_creator_flow/src/guide_creator_flow/crews/news_crew/config/: agents.yaml  tasks.yaml
Persnol Practise for crew ai/Flow Examples/guide_creator_flow/src/guide_creator_flow/crews/poem_crew/: poem_crew.py
Persnol Practise for crew ai/Flow Examples/guide_creator_flow/src/guide_creator_flow/tools/: custom_tool.py
Persnol Practise for crew ai/New folder (2)/new_crewaicrews/: README.md  report.md
Persnol Practise for crew ai/New folder (2)/new_crewaicrews/src/new_crewaicrews/: coding_main.py  crew.py  main.py
Persnol Practise for crew ai/New folder (2)/new_crewaicrews/src/new_crewaicrews/config/: coderagent.yaml
Persnol Practise for crew ai/New folder (2)/new_crewaicrews/src/new_crewaicrews/tools/: custom_tool.py
Persnol Practise for crew ai/New folder (2)/research_crew/: report.md
Persnol Practise for crew ai/New folder (2)/research_crew/src/research_crew/config/: ai_research_config.yaml
Persnol Practise for crew ai/practise_1/research_crew/: pyproject.toml
Persnol Practise for crew ai/practise_1/research_crew/src/research_crew/: crew.py  main.py
Persnol Practise for crew ai/practise_2/guide_creator_flow/src/guide_creator_flow/: main.py
Python/: Abstraction.ipynb  class.ipynb  decoraters.ipynb  dictionaries.ipynb  encapsulation.ipynb  exceptions.txt  if_else.ipynb  lambda_function.ipynb  list_methods.ipynb  loop.ipynb  math.ipynb  polymorphism.ipynb  print.ipynb  sets.ipynb  try_catch.ipynb  tuple.ipynb  variables.ipynb
Python/Files/: example.txt  example1.txt  files.py  test1.txt
Python/Modules/: module1.py  module2.py
RAG System/: RAG.ipynb  RAG.py
Tool Calling/: index.ipynb
UV, Crew Ai, LiteLLM/: commands.txt
UV, Crew Ai, LiteLLM/project2/: pyproject.toml
UV, Crew Ai, LiteLLM/project2/src/project2/: hello.py
UV, Crew Ai, LiteLLM/project3/: pyproject.toml
UV, Crew Ai, LiteLLM/project3/src/project3/: hello.py
UV, Crew Ai, LiteLLM/project4/: pyproject.toml
(+2 files in other folders)
