[project]
name = "crew-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Raza", email = "bhaia9036@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.114.0",
    "litellm>=1.60.2",
]

[project.scripts]
crew-flow = "crew_flow:main"
kick_off = "crew_flow.main:kick_off"
chain_prompt = "crew_flow.crew_flow:kick_off"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
