[project]
name = "litellm3"
version = "0.1.0"
description = "litellm3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
]

[project.scripts]
kickoff = "litellm3.main:kickoff"
run_crew = "litellm3.main:kickoff"
plot = "litellm3.main:plot"
runlitellm3 = "litellm3.main1:run_litellm_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
