[project]
name = "crew_deplyment"
version = "0.1.0"
description = "crew_deplyment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
]

[project.scripts]
kickoff = "crew_deplyment.main:kickoff"
run_crew = "crew_deplyment.main:kickoff"
plot = "crew_deplyment.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
