[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Raza", email = "bhaia9036@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.117.1",
    "crewai-tools>=0.42.2",
    "litellm>=1.67.0.post1",
]

[project.scripts]
project3 = "project3:main"
gemini = "project3.hello:gemini_llm"
gemini2 = "project3.hello:gemini_llm_second"
gemini3 = "project3.hello:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
