[project]
name = "project4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Raza", email = "bhaia9036@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project4 = "project4:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
