[project]
name = "knowledge"
version = "0.1.0"
description = "knowledge using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "google-generativeai>=0.8.5",
]

[project.scripts]
kickoff = "knowledge.main:kickoff"
run_crew = "knowledge.main:kickoff"
plot = "knowledge.main:plot"
rag_knowledge = "knowledge.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
